# High-Resolution-Satellite-Image-Segmentation-MLOps

./: .dvcignore  .gitignore  Blog.md  LICENSE  README.md  docker-compose.yml  generate_directory_structure.py  pyproject.toml  pytest.ini  requirements.txt  setup_project.sh  sonar-project.properties
.github/workflows/: ci.yaml
api/: config.py  dependencies.py  main.py
api/models/: data.py  training.py
api/routers/: data.py  health.py  training.py
api/services/: data.py  health.py  training.py
architecture/: mlops-architecture.md
config/: config.yaml  hyperparameters.yaml
core/config/: settings.py
core/data/: data_preparation.py
core/models/: metrics.py  trainer.py
core/utils/: logging.py
infrastructure/docker/api/: Dockerfile
infrastructure/docker/mlflow/: Dockerfile
infrastructure/docker/worker/: Dockerfile
infrastructure/scripts/: run_sonar_analysis.sh
src/: config.py  constants.py  data_preparation.py  dataset_generator.py  initialize.py  main.py  metrics.py  model_trainer.py  train.py
tasks/: celery_app.py  data_tasks.py  monitoring_tasks.py  training_tasks.py
tests/: conftest.py  test_data_preparation.py
tests/test_api/: test_data_routes.py  test_health.py  test_training_routes.py
tests/test_core/: test_data_preparation.py  test_model_trainer.py
tests/test_tasks/: test_data_tasks.py  test_training_tasks.py
